--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         radial-gradient(1200px 520px at 10% -10%, rgba(59,199,214,0.35), transparent 70%),
         radial-gradient(900px 520px at 90% 0%, rgba(249,236,196,0.55), transparent 65%),
         linear-gradient(180deg, rgba(59,199,214,0.10), rgba(247,253,255,1) 35%);
+        background-attachment: fixed;
     }
 
     a{ color:inherit; text-decoration:none; }
