--- a/index.html
+++ b/index.html
@@ -102,7 +102,16 @@
       box-shadow: 0 10px 22px rgba(16, 52, 58, 0.10);
       backdrop-filter: blur(8px);
     }
-    .search svg{ flex:0 0 auto; opacity:0.75; }
+    .search .icon{
+      flex:0 0 auto;
+      opacity:0.85;
+      font-size:18px;
+      line-height:1;
+      width:22px;
+      height:22px;
+      display:grid;
+      place-items:center;
+    }   
     .search input{
       width:100%;
       border:0;
@@ -332,9 +341,7 @@
 
       <div class="topbar">
         <div class="search" role="search" aria-label="FAQページ内検索">
-          <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true">
-            <path fill="currentColor" d="M10 18a8 8 0 1 1 5.293-14.004A8 8 0 0 1 10 18Zm11.707 2.293-5.12-5.12a10 10 0 1 0-1.414 1.414l5.12 5.12a1 1 0 0 0 1.414-1.414Z"/>
-          </svg>
+          <span class="icon" aria-hidden="true">🔎</span>
           <input id="faqSearch" type="search" placeholder="キーワードで検索（例：商用利用 / クレジット / 返金 / AI）" autocomplete="off" />
         </div>
 
