--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
     <footer>
       <div class="line"></div>
-      <div>© <span id="year"></span> ハト タイルセット. All rights reserved.</div>
+      <div>© <span id="year"></span> アオバト. All rights reserved.</div>
     </footer>
   </div>
 
