--- a/index.html
+++ b/index.html
@@ -336,7 +336,8 @@
     <header>
       <h1 class="title">よくある質問（FAQ）</h1>
       <p class="subtitle">
-        画像素材の購入・利用に関する質問をまとめています。検索か目次から目的の項目へ移動できます。
+        ⚠️ご注意<br>
+        本ページの情報は、BOOTHおよびDLsiteで販売している商品の内容です。Steamなどで販売しているタイルセットは、販売者様による規約が別途設けられておりますので、そちらの利用規約に従ってください。
       </p>
 
       <div class="topbar">
@@ -346,8 +347,7 @@
         </div>
 
         <div class="chips" aria-label="ヒント">
-          <div class="chip">検索: <kbd>Ctrl</kbd> + <kbd>F</kbd> でも可</div>
-          <div class="chip">目次からジャンプ可能</div>
+          <div class="chip">検索: <kbd>Ctrl</kbd> + <kbd>F</kbd> でも検索できます。</div>
         </div>
       </div>
     </header>
@@ -355,7 +355,7 @@
     <div class="grid">
       <!-- 目次 -->
       <aside class="panel" aria-label="目次">
-        <h2>目次（質問一覧）</h2>
+        <h2>目次</h2>
         <nav class="toc" id="toc">
           <div class="group">利用・ライセンス</div>
           <a href="#q01">Q1. 商用利用はできますか？</a>
@@ -388,7 +388,7 @@
         <h2>回答</h2>
         <main>
           <p class="hint" id="resultHint">
-            検索すると、該当しない質問は非表示になります。該当件数は検索欄の下に表示されます。
+            検索すると、該当しない質問は非表示になります。
           </p>
 
           <div class="qa" id="qa">
