--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
 <body>
   <div class="wrap" id="top">
     <header>
-      <h1 class="title">よくある質問（FAQ）</h1>
+      <h1 class="title">『ハト タイルセット』シリーズ ヘルプ</h1>
       <p class="subtitle">
-        ⚠️ご注意<br>
-        本ページの情報は、BOOTHおよびDLsiteで販売している商品の内容です。Steamなどで販売しているタイルセットは、販売者様による規約が別途設けられておりますので、そちらの利用規約に従ってください。
+        BOOTHおよびDLsiteで販売している商品に関するヘルプページです。<br>
+        Steamなどで販売しているタイルセットは、販売者様による規約が別途設けられておりますので、そちらの利用規約に従ってください。
       </p>
 
       <div class="topbar">
