--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <h1 class="title">『ハト タイルセット』シリーズ ヘルプ</h1>
       <p class="subtitle">
         BOOTHおよびDLsiteで販売している商品に関するヘルプページです。<br>
-        Steamなどで販売しているタイルセットは、販売者様による規約が別途設けられておりますので、そちらの利用規約に従ってください。
+        ⚠️Steamなどで販売しているタイルセットは、このページ内容は該当しません。販売者様による規約が別途設けられておりますので、そちらの利用規約を厳守して下さい。
       </p>
 
       <div class="topbar">
