--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       <div class="topbar">
         <div class="search" role="search" aria-label="FAQページ内検索">
           <span class="icon" aria-hidden="true">🔎</span>
-          <input id="faqSearch" type="search" placeholder="キーワードで検索（例：商用利用 / クレジット / 返金 / AI）" autocomplete="off" />
+          <input id="faqSearch" type="search" placeholder="キーワードで検索できます。（例：商用利用 / 画像加工 / クレジット表記 / AI）" autocomplete="off" />
         </div>
 
         <div class="chips" aria-label="ヒント">
@@ -358,7 +358,7 @@
         <h2>目次</h2>
         <nav class="toc" id="toc">
           <div class="group">利用・ライセンス</div>
-          <a href="#q01">Q1. 商用利用はできますか？</a>
+          <a href="#q01">Q1. ◯◯に使ってもいいですか？</a>
           <a href="#q02">Q2. クレジット表記は必要ですか？</a>
           <a href="#q03">Q3. 再配布・転載は禁止（禁止事項）は？</a>
           <a href="#q04">Q4. 編集・加工はどこまで可能ですか？</a>
@@ -393,15 +393,10 @@
 
           <div class="qa" id="qa">
             <article class="qa-item" id="q01" data-q="商用利用 ビジネス 収益 化 ゲーム 同人" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
-              <h3 class="q"><span class="badge">Q1</span>商用利用はできますか？</h3>
+              <h3 class="q"><span class="badge">Q1</span>◯◯に使ってもいいですか？</h3>
               <div class="a">
-                はい、商用利用は可能です。例えば以下の用途で利用できます。
-                <ul>
-                  <li>ゲーム・アプリ・Webサイト・動画（収益化含む）</li>
-                  <li>広告・バナー・SNS投稿・配信サムネイル</li>
-                  <li>同人作品・有償頒布物（素材そのものの再配布は不可）</li>
-                </ul>
-                ただし、素材の「再配布」や「素材としての販売」は禁止です（次項参照）。
+                利用規約が厳守できるのであればご利用可能です。
+                各サイト・サービスの仕様や形態は日々変化しておりますので、本素材の利用者様が少ない特定のサイトに対し利用許可を出すことは難しいです。ご利用予定のサービスが素材の規約に違反しないことをご自身にてご確認下さい。
               </div>
               <div class="meta">
                 <span class="pill"><strong>カテゴリ</strong> 利用・ライセンス</span>
