--- a/index.html
+++ b/index.html
@@ -420,10 +420,10 @@
             <article class="qa-item" id="q01" data-q="個人 商用 有料 有償 フリー ゲーム テーブル ボード ボドゲ TRPG、マーダーミステリー マダミス エモクロア クトゥルフ神話 TRPG セッション ユドナリウム ココフォリア 動画 バナー 有料 販売 作品 PC スマホ コンシューマ アプリ ソフト ウェア Web ブログ オンライン pictSQUARE ピクリエ SNS ポスト 投稿 X Instagram Bluesky YouTube ニコニコ 動画 サービス ライブ 配信 アーカイブ 動画 書籍 同人誌 紙 電子 プレゼン 学校 課題 研究 発表 資料 展示物 イベント 個展 即売会" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
               <h3 class="q"><span class="badge">Q1</span>◯◯に使ってもいいですか？</h3>
               <div class="a img-wrap">
+                <b>利用規約が厳守できるのであればご利用可能です。</b>
               <a href="images/Q1Base.png" target="_blank">
                 <img src="images/Q1Base.png" alt="基本ルール">
               </a>
-                利用規約が厳守できるのであればご利用可能です。
                 各サイト・サービスの仕様や形態は日々変化しておりますので、本素材の利用者様が少ない特定のサイトに対し利用許可を出すことは難しいです。ご利用予定のサービスが素材の規約に違反しないことをご自身にてご確認下さい。
               </div>
               <div class="meta">
