--- a/index.html
+++ b/index.html
@@ -352,6 +352,11 @@
       height: auto;
     }
 
+    .hr2 {
+      height: 5px;
+      background-image: repeating-linear-gradient(45deg,skyblue 0, skyblue 1px, transparent 0, transparent 50%);
+      background-size: 5px 5px;
+    }
     
   </style>
 </head>
@@ -421,8 +426,9 @@
               <h3 class="q"><span class="badge">Q1</span>◯◯に使ってもいいですか？</h3>
               <div class="a img-wrap">
                 <b>利用規約が厳守できるのであればご利用可能です。</b><br>
+                <hr>
               <a href="images/Q1Base.png" target="_blank">
-                <img src="images/Q1Base.png" alt="基本ルール">
+                <img src="images/Q1Base.png" alt="基本ルール画像">
               </a>
                 各サイト・サービスの仕様や形態は日々変化しておりますので、本素材の利用者様が少ない特定のサイトに対し個別に利用許可を出すことは難しいです。ご利用予定のサービスが素材の規約に違反しないことをご自身にてご確認下さい。
               </div>
