--- a/index.html
+++ b/index.html
@@ -351,11 +351,19 @@
       max-width: 100%;    /* 親ブロック基準に制限 */
       height: auto;
     }
-
-    .hr2 {
-      height: 5px;
-      background-image: repeating-linear-gradient(45deg,skyblue 0, skyblue 1px, transparent 0, transparent 50%);
-      background-size: 5px 5px;
+    
+    .hr {
+      height: 4px;
+      border: none;
+      background:
+        linear-gradient(
+          90deg,
+          #3BC7D6 0%,
+          #3BC7D6 50%,
+          #F9ECC4 50%,
+          #F9ECC4 100%
+        );
+      background-size: 12px 100%;
     }
     
   </style>
