--- a/index.html
+++ b/index.html
@@ -353,17 +353,14 @@
     }
     
     .hr {
-      height: 4px;
-      border: none;
-      background:
-        linear-gradient(
-          90deg,
-          #3BC7D6 0%,
-          #3BC7D6 50%,
-          #F9ECC4 50%,
-          #F9ECC4 100%
-        );
-      background-size: 12px 100%;
+      height: 6px;
+      border-radius: 999px;
+      background: linear-gradient(
+        90deg,
+        rgba(59,199,214,0.5),
+        rgba(249,236,196,0.6),
+        rgba(59,199,214,0.5)
+      );
     }
     
   </style>
