--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           <div class="group">利用・ライセンス</div>
           <a href="#q01">Q1. ◯◯に使ってもいいですか？</a>
           <a href="#q02">Q2. クレジット表記は必要ですか？</a>
-          <a href="#q03">Q3. 再配布・転載は禁止（禁止事項）は？</a>
+          <a href="#q03">Q3. 素材を加工してもいいですか？</a>
           <a href="#q04">Q4. 編集・加工はどこまで可能ですか？</a>
 
           <div class="group">購入・支払い</div>
@@ -453,7 +453,7 @@
           </p>
 
           <div class="qa" id="qa">
-            <article class="qa-item" id="q01" data-q="個人 商用 有料 有償 フリー ゲーム テーブル ボード ボドゲ TRPG、マーダーミステリー マダミス エモクロア クトゥルフ神話 TRPG セッション ユドナリウム ココフォリア 動画 バナー 有料 販売 作品 PC スマホ コンシューマ アプリ ソフト ウェア Web ブログ オンライン pictSQUARE ピクリエ SNS ポスト 投稿 X Instagram Bluesky YouTube ニコニコ 動画 サービス ライブ 配信 アーカイブ 動画 書籍 同人誌 紙 電子 プレゼン 学校 課題 研究 発表 資料 展示物 イベント 個展 即売会" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
+            <article class="qa-item" id="q01" data-q="個人 商用 有料 有償 フリー ゲーム WOLF RPGエディター ウディタ テーブル ボード ボドゲ TRPG、マーダーミステリー マダミス エモクロア クトゥルフ神話 TRPG セッション ユドナリウム ココフォリア 動画 バナー 有料 販売 作品 PC スマホ コンシューマ アプリ ソフト ウェア Web ブログ オンライン pictSQUARE ピクリエ メタバース バーチャル オフィス SNS ポスト 投稿 X Instagram Bluesky YouTube ニコニコ 動画 サービス ライブ 配信 アーカイブ 動画 書籍 同人誌 紙 電子 プレゼン 学校 課題 研究 発表 資料 展示物 イベント 個展 即売会" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
               <h3 class="q"><span class="badge">Q1</span>◯◯に使ってもいいですか？</h3>
               <div class="a img-wrap">
                 <b>利用規約が厳守できるのであればご利用可能です。</b><br>
@@ -463,7 +463,7 @@
               </a>
                 各サイト・サービスの仕様や形態は日々変化しておりますので、本素材の利用者様が少ない特定のサイトに対し個別に利用許可を出すことは難しいです。ご利用予定のサービスが素材の規約に違反しないことをご自身にてご確認下さい。
               <p class="note">
-            例:個人ゲーム、商用ゲーム、フリーゲーム、テーブルゲーム、ボードゲーム、TRPG、マーダーミステリー(マダミス)、エモクロアTRPG、クトゥルフ神話TRPG、TRPGオンラインセッションサービス(ユドナリウム、ココフォリアなど)、動画、バナー、有料販売作品、PC、スマホ、コンシューマ、アプリ、ソフトウェア、Webサイト、ブログ、オンライン即売会サービス(pictSQUARE、ピクリエなど)、SNS投稿(X、Instagram、Bluesky など)、YouTube、ニコニコ動画、その他動画配信サービス、ライブ配信、アーカイブ動画、電子書籍、同人誌(紙・電子)、プレゼン資料、学校課題・研究発表資料、展示物(イベント・個展・即売会)</p>
+            例:個人ゲーム、商用ゲーム、フリーゲーム、WOLF RPGエディター(ウディタ)、テーブルゲーム、ボードゲーム、TRPG、マーダーミステリー(マダミス)、エモクロアTRPG、クトゥルフ神話TRPG、TRPGオンラインセッションサービス(ユドナリウム、ココフォリアなど)、動画、バナー、有料販売作品、PC、スマホ、コンシューマ、アプリ、ソフトウェア、Webサイト、ブログ、オンライン即売会サービス(pictSQUARE、ピクリエなど)、メタバース、バーチャルオフィス、SNS投稿(X、Instagram、Bluesky など)、YouTube、ニコニコ動画、その他動画配信サービス、ライブ配信、アーカイブ動画、電子書籍、同人誌(紙・電子)、プレゼン資料、学校課題・研究発表資料、展示物(イベント・個展・即売会)</p>
             
             オンライン上の即売会・メタバースにつきましてはご利用のお客様が多い為、専用ページをご用意しております。<br>
             <a href="https://hatotilesets.fanbox.cc/posts/5460978">▶『ハト タイルセット』シリーズはオンライン即売会(pictSQUAREなど)での使用OK！</a>
@@ -488,7 +488,7 @@
                 　https://www.dlsite.com/home/circle/profile/=/maker_id/RG51773.html<br>
 
 </blockquote>
-             「素材協力」、「提供者」等、制作に携わっていると受け取られる表記はお止め下さい。
+             「素材協力」、「提供者」等、制作に直接携わっていると受け取られる表記はお止め下さい。
 
               </div>
               <div class="meta">
@@ -497,17 +497,13 @@
               </div>
             </article>
 
-            <article class="qa-item" id="q03" data-q="再配布 禁止 二次配布 転売 素材集 同梱 抽出" data-a="素材データのまま渡す行為は不可。成果物としての利用は可。">
-              <h3 class="q"><span class="badge">Q3</span>再配布・転載は禁止（禁止事項）は？</h3>
+            <article class="qa-item" id="q03" data-q="画像 加工 縮小 拡大 回転 色 変更 影 光 追加 トリミング ファイル 名 前 透過 加筆" data-a="素材加工は許可しています。">
+              <h3 class="q"><span class="badge">Q3</span>素材を加工してもいいですか？</h3>
               <div class="a">
-                以下はすべて禁止です（例示）。
-                <ul>
-                  <li>素材ファイルの再配布（無料・有料問わず）</li>
-                  <li>素材集・テンプレ素材・アセットパックとしての販売</li>
-                  <li>素材の大部分が抽出できる形での公開（加工の有無に関わらず）</li>
-                  <li>商標・ロゴ登録を主目的とした使用（素材自体が主体になる利用）</li>
-                </ul>
-                成果物（ゲーム、動画、Webページ等）の一部として使うのは問題ありません。
+              <b>はい。</b><hr>
+                素材の加工として縮小、拡大、回転、色変更、影や光の追加、トリミング、ファイル名変更、透過加工、一部を切り抜いて別のパーツとして加工する行為は許可しております。<br>
+                <br>
+                素材を他作者様による素材と組み合わせて加工する行為は、"作者アオバト側は"問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
               </div>
               <div class="meta">
                 <span class="pill"><strong>カテゴリ</strong> 利用・ライセンス</span>
