--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <a href="#q01">Q1. ◯◯に使ってもいいですか？</a>
           <a href="#q02">Q2. クレジット表記は必要ですか？</a>
           <a href="#q03">Q3. 素材を加工してもいいですか？</a>
-          <a href="#q04">Q4. 編集・加工はどこまで可能ですか？</a>
+          <a href="#q04">Q4. 年齢制限のある作品に使用できますか？</a>
 
           <div class="group">購入・支払い</div>
           <a href="#q05">Q5. 支払い方法は何がありますか？</a>
@@ -497,13 +497,13 @@
               </div>
             </article>
 
-            <article class="qa-item" id="q03" data-q="画像 加工 縮小 拡大 回転 色 変更 影 光 追加 トリミング ファイル 名 前 透過 加筆" data-a="素材加工は許可しています。">
+            <article class="qa-item" id="q03" data-q="画像 加工 縮小 拡大 回転 色 変更 影 光 追加 トリミング ファイル 名 前 透過 加筆 合成 リサイズ 色調" data-a="素材加工は許可しています。">
               <h3 class="q"><span class="badge">Q3</span>素材を加工してもいいですか？</h3>
               <div class="a">
               <b>はい。</b><hr>
                 素材の加工として縮小、拡大、回転、色変更、影や光の追加、トリミング、ファイル名変更、透過加工、一部を切り抜いて別のパーツとして加工する行為は許可しております。<br>
                 <br>
-                素材を他作者様による素材と組み合わせて加工する行為は、"作者アオバト側は"問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
+                素材を他作者様による素材と合成する行為は、"作者アオバト側は"問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
               </div>
               <div class="meta">
                 <span class="pill"><strong>カテゴリ</strong> 利用・ライセンス</span>
@@ -511,12 +511,11 @@
               </div>
             </article>
 
-            <article class="qa-item" id="q04" data-q="加工 編集 トリミング 色変更 合成 リサイズ" data-a="加工は可。禁止事項に該当しない範囲で自由。">
-              <h3 class="q"><span class="badge">Q4</span>編集・加工はどこまで可能ですか？</h3>
+            <article class="qa-item" id="q04" data-q="年齢 歳 18 r18 r-18 18禁 15 r15 r-15 15禁 アダルト 暴力 犯罪" data-a="年齢制限">
+              <h3 class="q"><span class="badge">Q4</span>年齢制限のある作品に使用できますか？</h3>
               <div class="a">
-                トリミング、色調整、合成、拡大縮小、エフェクト追加などの加工は可能です。
-                <br />
-                ただし、加工後であっても「素材として再配布」や「抽出可能な形での公開」は禁止です。
+              <b>はい。</b><hr>
+                「アダルト」、「暴力」の表現が含まれる作品に使用できますが、作品の表現内容に素材作者アオバトは一切関与しない旨をご承知おきください。
               </div>
               <div class="meta">
                 <span class="pill"><strong>カテゴリ</strong> 利用・ライセンス</span>
