--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
           <a href="#a04">年齢制限のある作品に使用できますか？</a>
           <a href="#a05">素材を使用した作品を商用利用してもいいですか？</a>
           <a href="#a06">案件にて素材を使用できますか？</a>
-          <a href="#a07">AI・人工知能に利用してもいいですか？</a>
+          <a href="#a07">素材をAI・人工知能に利用してもいいですか？</a>
           <a href="#a08">政治等の意見が分かれるコンテンツに使用してもいいですか？</a>
           <a href="#a09">広告画像に使用してもいいですか？</a>
           <a href="#a10">素材自体に価値が発生する形で商品に含めてもいいですか？</a>
@@ -510,7 +510,7 @@
           </p>
 
           <div class="qa" id="qa">
-            <article class="qa-item" id="a01" data-q="個人 商用 有料 有償 フリー ゲーム WOLF RPGエディター ウディタ テーブル ボード ボドゲ TRPG、マーダーミステリー マダミス エモクロア クトゥルフ神話 TRPG セッション ユドナリウム ココフォリア 動画 バナー 有料 販売 作品 PC スマホ コンシューマ アプリ ソフト ウェア Web ブログ オンライン pictSQUARE ピクリエ メタバース バーチャル オフィス SNS ポスト 投稿 X Instagram Bluesky YouTube ニコニコ 動画 サービス ライブ 配信 アーカイブ 動画 書籍 同人誌 紙 電子 プレゼン 学校 課題 研究 発表 資料 展示物 イベント 個展 即売会" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
+            <article class="qa-item" id="a01" data-q="個人 商用 有料 有償 フリー ゲーム WOLF RPGエディター ウディタ テーブル ボード ボドゲ TRPG、マーダーミステリー マダミス エモクロア クトゥルフ神話 TRPG セッション ユドナリウム ココフォリア 動画 バナー 有料 販売 作品 PC スマホ コンシューマ アプリ ソフト ウェア Web ブログ オンライン pictSQUARE ピクリエ メタバース バーチャル オフィス SNS ポスト 投稿 X Instagram インスタグラム インスタ Twitter Bluesky YouTube ニコニコ 動画 サービス ライブ 配信 アーカイブ 動画 書籍 同人誌 紙 電子 プレゼン 学校 課題 研究 発表 資料 展示物 イベント 個展 即売会" data-a="商用利用は可能です。利用範囲と禁止事項をご確認ください。">
               <h3 class="q"><span class="badge">Q</span>◯◯に使ってもいいですか？</h3>
               <div class="a img-wrap">
                 <b>利用規約が厳守できるのであればご利用可能です。</b><br>
@@ -586,6 +586,7 @@
               <div class="a">
                 <b>はい。</b>
                 <hr>
+                素材は必ず「作品に含める形」で使用してください。<br>
                 特にゲーム以外の環境は第三者による規約違反の危険性が高い(素材を使用している事をご存じない方が多い)為、素材の抜き出し禁止文言を分かりやすく記載するなどの不正対策をお願い致します。
                 <p class="note">
                 例:ゲーム、DLC(追加・ダウンロードコンテンツ)、動画、配信</p>
@@ -598,7 +599,7 @@
             <article class="qa-item" id="a06" data-q="コミッション 依頼 マップ依頼 マップ制作依頼 ココナラ スケブ Skeb SKIMA ランサーズ SKIMA スキロッツ Skillots 依頼 案件 サークル 受け渡し オーダーメイド 受注 外注" data-a="案件は非推奨">
               <h3 class="q"><span class="badge">Q</span>案件にて素材を使用できますか？</h3>
               <div class="a">
-               <b>不利益が発生しない範囲に限り黙認しております。</b>
+               <b>素材作者アオバトに対し、不利益が発生しない範囲に限り黙認しております。</b>
                <hr>
                詳細につきましては専用ページをご覧ください。
             <a href="https://hatotilesets.fanbox.cc/posts/4954451">▶案件やサークル等における、第三者との有料素材の受け渡しについて</a><br>
@@ -610,53 +611,47 @@
               </div>
             </article>
 
-            <article class="qa-item" id="q07" data-q="ダウンロード 期限 回数 制限 再DL" data-a="期限や回数制限はショップ仕様に依存。">
-              <h3 class="q"><span class="badge">Q7</span>ダウンロード期限・回数制限はありますか？</h3>
+            <article class="qa-item" id="a07" data-q="Instagram インスタグラム  インスタ オプトアウト ポスト 投稿 Twitter X AI 人工知能 学習 ロラ Lora" data-a="AI不可">
+              <h3 class="q"><span class="badge">Q</span>素材をAI・人工知能に利用してもいいですか？</h3>
               <div class="a">
-                原則として、購入後はいつでも再ダウンロード可能な設計を想定していますが、
-                ショッププラットフォームの仕様により「一定期間」「一定回数」などの制限がかかる場合があります。
-                <br />
-                期限がある場合は購入画面または購入メールに記載されます。
+                <b>いいえ。</b>
+                <br>
+                <hr>
+制作者アオバトによる画像や文言など全てのコンテンツにおいて、AI学習、生成は禁止です。
+<p class="note">、Web上にアップロードすることでAIに学習される可能性のある形式のサービス(旧Twitterなど)での利用は可能ですが、AI学習を拒否するオプション設定がある場合は、可能な限り拒否としてください。</p>
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> ダウンロード・データ</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
 
-            <article class="qa-item" id="q08" data-q="形式 png jpg psd 解像度 サイズ" data-a="一般的にはPNG中心。商品ページに記載。">
-              <h3 class="q"><span class="badge">Q8</span>画像サイズや形式は何ですか？</h3>
+            <article class="qa-item" id="a08" data-q="政治 宗教 法律 著作権 意見 主張 団体 非公式 法人" data-a="政治・宗教利用禁止">
+              <h3 class="q"><span class="badge">Q</span>政治等の意見が分かれるコンテンツに使用してもいいですか？</h3>
               <div class="a">
-                素材は主に PNG（透過あり）を中心に提供しています。パックによっては JPG / PSD / clip などが含まれる場合があります。
-                <br />
-                正確な内容（ピクセル数、カラーモード、収録点数）は、各商品の説明欄に記載します。
+                <b>いいえ。</b>
+                <hr>
+                当ショップは小規模な開発環境による娯楽作品への利用を想定しております。
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> ダウンロード・データ</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
 
-            <article class="qa-item" id="q09" data-q="ダウンロード できない 破損 解凍 zip パスワード" data-a="ブラウザ変更、再DL、解凍ソフト確認。">
-              <h3 class="q"><span class="badge">Q9</span>ダウンロードできません / 破損しています</h3>
+            <article class="qa-item" id="a09" data-q="広告 バナー 宣伝 告知">
+              <h3 class="q"><span class="badge">Q</span>広告画像に使用してもいいですか？</h3>
               <div class="a">
-                次を順にお試しください。
-                <ul>
-                  <li>別ブラウザでダウンロード（Chrome / Firefox等）</li>
-                  <li>通信が不安定な環境の場合、回線を変更して再ダウンロード</li>
-                  <li>zip解凍ソフトを変更（標準解凍で失敗する場合あり）</li>
-                  <li>セキュリティソフトが自動隔離していないか確認</li>
-                </ul>
-                解決しない場合は、注文番号と症状（OS/ブラウザ/エラー表示）を添えてお問い合わせください。
+                <b>個人/小規模な開発環境における作品であれば制限しておりません。</b><hr>
+                企業/法人による広告利用は非推奨です。
+                規約違反や著作権上の問題、第三者への損害等が発生する可能性が高い行為はお控えください。
+
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> トラブル・返金</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
 
-            <article class="qa-item" id="q10" data-q="返金 キャンセル 返品" data-a="デジタル商品の性質上、原則不可。例外は重複決済等。">
-              <h3 class="q"><span class="badge">Q10</span>返金はできますか？</h3>
+            <article class="qa-item" id="a10" data-q="素材 パック バンドル アセット 素材集 付加価値" data-a="素材集への同梱禁止">
+              <h3 class="q"><span class="badge">Q10</span>素材自体に価値が発生する形で商品に含めてもいいですか？</h3>
               <div class="a">
                 デジタル商品のため、原則として購入後の返金・キャンセルはお受けしていません。
                 <br />
