--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
               <div class="a">
                <b>素材作者アオバトに対し、不利益が発生しない範囲に限り黙認しております。</b>
                <hr>
+               委託者と制作者双方が有料/無料素材を購入している必要があります。<br>
                詳細につきましては専用ページをご覧ください。
             <a href="https://hatotilesets.fanbox.cc/posts/4954451">▶案件やサークル等における、第三者との有料素材の受け渡しについて</a><br>
 
@@ -611,14 +612,15 @@
               </div>
             </article>
 
-            <article class="qa-item" id="a07" data-q="Instagram インスタグラム  インスタ オプトアウト ポスト 投稿 Twitter X AI 人工知能 学習 ロラ Lora" data-a="AI不可">
+            <article class="qa-item" id="a07" data-q="training dataset 機械学習 機械 トレーニング データセット Instagram インスタグラム  インスタ オプトアウト ポスト 投稿 Twitter X AI 人工知能 学習 ロラ Lora 生成物" data-a="AI不可">
               <h3 class="q"><span class="badge">Q</span>素材をAI・人工知能に利用してもいいですか？</h3>
               <div class="a">
                 <b>いいえ。</b>
                 <br>
                 <hr>
-制作者アオバトによる画像や文言など全てのコンテンツにおいて、AI学習、生成は禁止です。
-<p class="note">、Web上にアップロードすることでAIに学習される可能性のある形式のサービス(旧Twitterなど)での利用は可能ですが、AI学習を拒否するオプション設定がある場合は、可能な限り拒否としてください。</p>
+制作者アオバトによる画像や文言など全てのコンテンツにおいて、AI学習、生成は禁止です。<br>
+<br>
+Web上にアップロードすることでAIに学習される可能性のある形式のサービス(旧Twitterなど)での利用は可能ですが、AI学習を拒否するオプション設定がある場合は、可能な限り拒否としてください。
               </div>
               <div class="meta">
                 <a class="backtop" href="#top">ページ上部へ</a>
@@ -651,41 +653,39 @@
             </article>
 
             <article class="qa-item" id="a10" data-q="素材 パック バンドル アセット 素材集 付加価値" data-a="素材集への同梱禁止">
-              <h3 class="q"><span class="badge">Q10</span>素材自体に価値が発生する形で商品に含めてもいいですか？</h3>
+              <h3 class="q"><span class="badge">Q</span>素材自体に価値が発生する形で作品に含めてもいいですか？</h3>
               <div class="a">
-                デジタル商品のため、原則として購入後の返金・キャンセルはお受けしていません。
-                <br />
-                ただし、重複決済やシステム障害など明確な不備がある場合は個別に確認します。
+              <b>いいえ。</b>
+              <hr>
+              素材集への同梱、素材以外に付加価値の無い作品やDLC(追加コンテンツ)、素材を利用していることを理由に参加料金を過剰に徴収するオンライン即売会などは禁止です。
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> トラブル・返金</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
 
-            <article class="qa-item" id="q11" data-q="AI 学習 生成 training dataset 機械学習" data-a="原則不可。素材やページへのAI学習目的利用は禁止。">
-              <h3 class="q"><span class="badge">Q11</span>AI学習・AI生成への利用は可能ですか？</h3>
+            <article class="qa-item" id="b01" data-q="RTP ランタイム パッケージ ランタイムパッケージ デフォルト デフォ 素材 デフォ素材 RPG ツクール XP VX Ace 2000 MV MZ テクスチャ フォント WOLF エディター ウディタ 初期 ツクールRTP" data-a="原則不可。素材やページへのAI学習目的利用は禁止。">
+              <h3 class="q"><span class="badge">Q</span>素材に外部商品やRTPは含まれていますか？</h3>
               <div class="a">
-                原則として禁止です（AI学習・学習データへの投入・AI生成の素材用途を含む）。
-                <br />
-                例外的に許可する場合があるなら、商品ページに明記します。
+                <b>いいえ。</b>
+                <hr>
+                素材画像自体には「ツクールシリーズ」などの外部商品のRTP(ランタイムパッケージ)や初期搭載素材の改変物またはその一部などは含まれておりません。<br>
+                <br>
+                サンプルとして同梱されているゲームフォルダには、一部に「ツクールシリーズ」のデフォルト素材が含まれている場合がございますが、素材とサンプルゲームのフォルダは分かりやすく区別されており、利用規約テキストファイルには素材ファイルの内訳を記載しておりますので、ご確認ください。
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> AI・学習利用</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
 
-            <article class="qa-item" id="q12" data-q="複数端末 共有 チーム メンバー" data-a="購入者本人の複数端末は可、第三者共有は不可が一般的。">
-              <h3 class="q"><span class="badge">Q12</span>購入した素材は複数端末で使えますか？</h3>
+            <article class="qa-item" id="b02" data-q="training dataset 機械学習 機械 トレーニング データセット Instagram オプトアウト AI 人工知能 学習 ロラ Lora 生成物" data-a="AI不使用。">
+              <h3 class="q"><span class="badge">Q</span>素材にAI・人工知能による生成物は含まれていますか？</h3>
               <div class="a">
-                購入者本人が所有する複数端末での利用は一般的に問題ありません。
-                <br />
-                一方で、第三者への素材ファイル共有（チーム内の無制限共有など）は「再配布」に該当するため禁止となるのが一般的です。
-                チーム制作の場合は、利用人数分のライセンス購入や、法人向けライセンスの有無をご確認ください。
+              <b>いいえ。</b>
+              <hr>
+                当ショップで販売している素材は全てオリジナルの手作りです。
               </div>
               <div class="meta">
-                <span class="pill"><strong>カテゴリ</strong> アカウント・その他</span>
                 <a class="backtop" href="#top">ページ上部へ</a>
               </div>
             </article>
