--- a/index.html
+++ b/index.html
@@ -707,6 +707,8 @@ Web上にアップロードすることでAIに学習される可能性のある
                 <hr>
                 素材画像自体には「ツクールシリーズ」などの外部商品のRTP(ランタイムパッケージ)や初期搭載素材の改変物またはその一部などは含まれておりません。<br>
                 <br>
+                素材内に外部素材(フォントやテクスチャなど)が含まれる場合は、クレジット表記不要の商用利用可能な素材のみを、利用規約に沿って使用させて頂いております。<br>
+               <br> 
                 サンプルとして同梱されているゲームフォルダには、一部に「ツクールシリーズ」のデフォルト素材が含まれている場合がございますが、素材とサンプルゲームのフォルダは分かりやすく区別されており、利用規約テキストファイルには素材ファイルの内訳を記載しておりますので、ご確認ください。
               </div>
               <div class="meta">
