--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ Web上にアップロードすることでAIに学習される可能性のある
             素材制作には十分注意を払っておりますが、万が一サンプルプロジェクトの不備や、素材画像自体のズレなどを発見された場合は、BOOTHへメッセージを頂けますと幸いです。対応が必要な素材は可能な限り早急に修正致します。
 お手数ですが、よろしくお願いします。<br>
             <br>
-            <a href="https://aobato-tileset.booth.pm/">ハト タイルセット - BOOTH</a><br>
+            <a href="https://aobato-tileset.booth.pm/">▶ハト タイルセット - BOOTH</a><br>
 ログインの上、手紙✉️ボタンよりメッセージが送信できます。<br>
 <br>
             <b>不具合報告のテンプレート(任意)</b>
