--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ Web上にアップロードすることでAIに学習される可能性のある
               <ul>
                 <li><a href="https://aobato-tileset.booth.pm/">BOOTH</a></li>
                 <li><a href="https://www.dlsite.com/home/circle/profile/=/maker_id/RG51773.html">DLsite</a></li>
-                <li><a href="https://www.dlsite.com/home/circle/profile/=/maker_id/RG51773.html">Steam</a></li>
+                <li><a href="https://store.steampowered.com/search/?developer=%E3%83%8F%E3%83%88">Steam</a></li>
               </ul>
               <p class="note">Steamは販売管理形態が異なるため、一部素材のみの販売となります。</p>
                 </div>
