--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           
           <div class="group">販売サイト</div>
           <a href="#c01">販売サイトはどこですか？</a>
-          <a href="#c02">領収書(インボイス対応)は発行できますか？</a>
+          <a href="#c02">領収書を発行してください。</a>
           <a href="#c03">素材の紹介記事を作成してもいいですか？</a>
           
           <div class="group">トラブル</div>
