--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
           <div class="group">販売サイト</div>
           <a href="#c01">販売サイトはどこですか？</a>
           <a href="#c02">領収書を発行してください。</a>
-          <a href="#c03">素材の紹介記事を作成してもいいですか？</a>
+          <a href="#c03">素材の紹介をしてもいいですか？</a>
           
           <div class="group">トラブル</div>
           <a href="#d01">ダウンロードや解凍ができません。</a>
