--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           <a href="#a07">素材をAI・人工知能に利用してもいいですか？</a>
           <a href="#a08">政治等の意見が分かれるコンテンツに使用してもいいですか？</a>
           <a href="#a09">広告画像に使用してもいいですか？</a>
-          <a href="#a10">素材自体に価値が発生する形で商品に含めてもいいですか？</a>
+          <a href="#a10">素材自体の価値に頼る作品を公開してもいいですか？</a>
           <div class="group">素材の内容</div>
           <a href="#b01">素材に外部商品やRTPは含まれていますか？</a>
           <a href="#b02">素材にAI・人工知能による生成物は含まれていますか？</a>
@@ -597,7 +597,7 @@
               <h3 class="q"><span class="badge">Q</span>加工してもいいですか？</h3>
               <div class="a">
               <b>はい。</b><hr>
-                縮小、拡大、回転、色変更、影や光の追加、トリミング、ファイル名変更、透過加工、一部を切り抜いて別のパーツとして加工するなどの加工は許可しております。<br>
+                縮小、拡大、回転、色変更、影や光の追加、トリミング、ファイル名変更、透過加工、一部を切り抜いて別のパーツとして加工するなどの処理は許可しております。<br>
                 <br>
                 素材を他作者様による素材と合成する行為は、"作者アオバト側は"問題ございませんが、組み合わせる他の素材の作者様のご意向は把握しておりません。素材作者に関する誤認や問題が発生しないように厳重にご注意ください。
               </div>
@@ -689,7 +689,7 @@ Web上にアップロードすることでAIに学習される可能性のある
             </article>
 
             <article class="qa-item" id="a10" data-q="素材 パック バンドル アセット 素材集 付加価値" data-a="素材集への同梱禁止">
-              <h3 class="q"><span class="badge">Q</span>素材自体に価値が発生する形で作品に含めてもいいですか？</h3>
+              <h3 class="q"><span class="badge">Q</span>素材自体の価値に頼る作品を公開してもいいですか？</h3>
               <div class="a">
               <b>いいえ。</b>
               <hr>
