--- a/index.html
+++ b/index.html
@@ -481,6 +481,14 @@ body.is-searching #tocPanel{
   display:none !important;
 }
 
+/* スマホ・画面幅が狭い場合は左余白を解除 */
+@media (max-width: 600px){
+  .a,
+  .meta{
+    padding-left: 0;
+  }
+}      
+    
   </style>
 </head>
 
