--- a/index.html
+++ b/index.html
@@ -889,6 +889,8 @@ Web上にアップロードすることでAIに学習される可能性のある
     </footer>
   </div>
 
+<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmck14czg00h2qak7a1wy8407"></script>
+  
 <script>
 (function(){
   const $ = (sel, root=document) => root.querySelector(sel);
