--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@ Web上にアップロードすることでAIに学習される可能性のある
     </footer>
   </div>
 
-<iframe	style="width: 400px; height: 600px;" src="https://app.fastbots.ai/embed/cmck14czg00h2qak7a1wy8407"></iframe>
+<script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cmck14czg00h2qak7a1wy8407"></script>
   
 <script>
 (function(){
