--- a/index.html
+++ b/index.html
@@ -486,6 +486,9 @@ body.is-searching #tocPanel{
   .a,
   .meta{
     padding-left: 0;
+
+    .search .icon{
+    display: none;
   }
 }      
     
