--- a/index.html
+++ b/index.html
@@ -486,11 +486,14 @@ body.is-searching #tocPanel{
   .a,
   .meta{
     padding-left: 0;
-
-    .search .icon{
-    display: none;
   }
 }      
+
+  @media (max-width: 600px){
+  .search .icon{
+    display: none;
+  }
+}
     
   </style>
 </head>
